--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -1,6 +1,11 @@
 name: Cypress Tests
 
-on: [push]
+on: 
+  workflow_dispatch:
+    inputs:
+      cli:
+        description: Run by cypress command line
+        default: yarn cypress run
 
 jobs:
   cypress-electron-tests:
@@ -13,4 +18,4 @@ jobs:
           run: yarn install
           
         - name: Run E2E tests
-          run: yarn cypress run
+          run: ${{github.event.inputs.cli}}
