--- a/.github/workflows/cypress-cloud.yml
+++ b/.github/workflows/cypress-cloud.yml
@@ -3,7 +3,7 @@ name: Cypress Cloud
 on: 
   workflow_dispatch:
     inputs:
-      cli:
+      spec:
         description: Run by cypress command line
         default: cypress/e2e/*
 jobs:
@@ -14,7 +14,7 @@ jobs:
          uses: actions/checkout@v3.3.0
        
        - name: Cypress run
-         uses: cypress-io/github-action@v5.0.8
+         uses: cypress-io/github-action@v5.7.1
          with:
             install-command: yarn install
             browser: electron
@@ -22,7 +22,7 @@ jobs:
             group: UI Electron
             spec: ${{ github.event.inputs.spec }}
          env:
-            CYPRESS_RECORD_KEY: e1328cc2-6461-4b48-bee2-be9f4038a0ef
+            CYPRESS_RECORD_KEY: 505197c4-f6c5-4075-9b51-bcb5e6a7ad78
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             
   cypress-e2e-chrome:
@@ -40,7 +40,7 @@ jobs:
             group: UI Electron
             spec: ${{ github.event.inputs.spec }}
          env:
-            CYPRESS_RECORD_KEY: e1328cc2-6461-4b48-bee2-be9f4038a0ef
+            CYPRESS_RECORD_KEY: 505197c4-f6c5-4075-9b51-bcb5e6a7ad78
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   cypress-e2e-firefox:
     runs-on: ubuntu-latest
@@ -57,7 +57,7 @@ jobs:
             group: UI Electron
             spec: ${{ github.event.inputs.spec }}
           env:
-             CYPRESS_RECORD_KEY: e1328cc2-6461-4b48-bee2-be9f4038a0ef
+             CYPRESS_RECORD_KEY: 505197c4-f6c5-4075-9b51-bcb5e6a7ad78
              GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             
             
