--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -1,7 +1,12 @@
 name: Cypress tests
 
-on: [push]
-
+on:
+  workflow_dispatch:
+    inputs:
+      cli:
+        description: Run by cypress command line
+        default: yarn cypress run
+    
 jobs: 
   cypress-electron-tests:
     runs-on: ubuntu-latest
@@ -13,4 +18,4 @@ jobs:
         run: yarn install
 
       - name: Run E2E tests
-        run: yarn cypress run
+        run: ${{ github.event.inputs.cli }}
