--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -1,6 +1,11 @@
 name: Cypress Tests
 
-on: [push]
+on:
+  workflow_dispatch:
+    imputs:
+      cli:
+        description: Run by cypress command line
+        default: npx cypress run
 
 jobs:
   cypres-electron-tests:
@@ -13,4 +18,4 @@ jobs:
         run: npm install
 
       - name: Run E2E tests
-        run: npx cypress run
+        run: ${{ github.event.inputs.cli }}
