--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -2,14 +2,17 @@ name: Cypress Tests
 
 on:
   workflow_dispatch:
-    imputs:
+    inputs:
       cli:
-        description: Run by cypress command line
-        default: npx cypress run
+        description: Run by cypress node command
+        default: node runner.js
 
 jobs:
   cypres-electron-tests:
     runs-on: ubuntu-latest
+    container:
+       image: cypress/brosers:node.18.12.0-chrome103-ff107
+       options: --user 1001
     steps:
       - name: Get code
         uses: actions/checkout@v3.3.0
