--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -11,7 +11,7 @@ jobs:
   cypres-electron-tests:
     runs-on: ubuntu-latest
     container:
-       image: cypress/brosers:node.18.12.0-chrome103-ff107
+       image: cypress/browsers:node.18.12.0-chrome103-ff107
        options: --user 1001
     steps:
       - name: Get code
