--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -2,13 +2,9 @@ name: Cypress Tests
 
 on:
   workflow_dispatch:
-    inputs:
-      cli:
-        description: Run by cypress node command
-        default: node runner.js
 
 jobs:
-  cypres-electron-tests:
+  cypress-electron-tests:
     runs-on: ubuntu-latest
     container:
       image: cypress/browsers:node18.12.0-chrome103-ff107
@@ -21,4 +17,42 @@ jobs:
         run: npm install
 
       - name: Run E2E tests
-        run: ${{ github.event.inputs.cli }}
+        run: node runner-electron.js
+    env:
+       TARGET_TOKEN_ELECTRON: ${{ secrets.TARGET_TOKEN_ELECTRON }}
+
+  cypress-chrome-tests:
+    needs: cypress-electron-tests
+    runs-on: ubuntu-latest
+    container:
+      image: cypress/browsers:node18.12.0-chrome103-ff107
+      options: --user 1001
+    steps:
+      - name: Get code
+        uses: actions/checkout@v3.3.0
+
+      - name: install dependencies
+        run: npm install
+
+      - name: Run E2E tests
+        run: node runner-chrome.js
+    env:
+       TARGET_TOKEN_CHROME: ${{ secrets.TARGET_TOKEN_CHROME }}
+
+  cypress-firefox-tests:
+    needs: cypress-electron-tests
+    runs-on: ubuntu-latest
+    container:
+      image: cypress/browsers:node18.12.0-chrome103-ff107
+      options: --user 1001
+    steps:
+      - name: Get code
+        uses: actions/checkout@v3.3.0
+
+      - name: install dependencies
+        run: npm install
+
+      - name: Run E2E tests
+        run: node runner-firefox.js
+    env:
+       TARGET_TOKEN_FIREFOX: ${{ secrets.TARGET_TOKEN_FIREFOX }}
